# AI-Course-Advisor

./: README.md  experiment.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
pages/: last.py  login.py  notes_gen.py  overall.py  progress_dashboard.py  quiz_overall.py  quiz_platform.py  youtube_gen.py
src/: db.py  download.py  notes.py  progress.py  quiz.py  topics.py  youtube.py
